# interlocking-solver

./: .gitignore  Cargo.toml  README.md  build.sh  docker-compose.yml
client/: bun.lockb  package.json  vite.config.ts
client/src/lib/: SolutionCanvas.svelte  client.ts  dog-shape.ts  types.ts
client/src/routes/: +layout.svelte  +page.svelte  styles.css
firedbg/: target.json
firedbg/src/: cells.rs.firedbg.map  main.rs.firedbg.map  puzzle.rs.firedbg.map  searcher.rs.firedbg.map
puzzles/: 20240106T034621_step_F9S20A21.pcad  20240106T074551_step_F7S21A22.pcad
server/: puzzles.py  requirements.txt
server/templates/: puzzles.html
src/: cells.rs  gen_all_puzzles.rs  iters.rs  launcher.rs  luncher.rs  main.rs  puzzle.rs  puzzle_num_format.rs  searcher.rs  server.rs  v3.rs
viewer/: .gitignore  Makefile  puzzles.py  server.py  tailwind.config.js
viewer/templates/: base.html  index.html
