[package]
name = "interlocking-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bitvec_simd = "0.20.5"
chrono = "0.4.31"
futures = "0.3.30"
itertools = "0.12.0"
mongodb = "2.8.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = "1.0.196"
tokio = "1.36.0"
tracing-subscriber = "0.3.18"
